objects/RevenueCat_Setting__mdt.object
<CustomObject>
    <fields>
        <fullName>Header__c</fullName>
        <description>Label of the custom HTTP header passed from middleware</description>
        <label>Header</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Token__c</fullName>
        <label>Token</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Use_Hashing__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indiacates if the value in Token field is hashed or plain</description>
        <label>Use Hashing</label>
        <type>Checkbox</type>
    </fields>
    <label>RevenueCat Setting</label>
    <pluralLabel>RevenueCat Settings</pluralLabel>
</CustomObject>